src/MapCss.Parser/Generated/MapCssParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Projects/mapcss-net/tools/./../tools/tmp/antlr-9932d6aaf9ee438abd3a06f07e2164f4/MapCssParser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace MapCss.Parser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class MapCssParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		META=1, SET=2, NODE=3, WAY=4, RELATION=5, AREA=6, CANVAS=7, TRUE=8, FALSE=9, 
		ZOOMRANGE=10, RE_NMATCH=11, RE_MATCH=12, CONTAINS=13, PREFIX=14, SUFFIX=15, 
		NMATCH=16, MATCH=17, NEQ=18, EQEQ=19, GTE=20, LTE=21, OR=22, AND=23, DCOLON=24, 
		QMARK=25, HEXCOLOR=26, NUMBER=27, DSTRING=28, SSTRING=29, LINE_COMMENT=30, 
		BLOCK_COMMENT=31, REGEX=32, LBRACE=33, RBRACE=34, LBRACK=35, RBRACK=36, 
		LPAREN=37, RPAREN=38, SEMI=39, COLON=40, COMMA=41, DOT=42, PIPE=43, EQ=44, 
		LT=45, GT=46, PLUS=47, MINUS=48, STAR=49, SLASH=50, PERCENT=51, BANG=52, 
		IDENT=53, WS=54, BOM=55;
	public const int
		RULE_stylesheet = 0, RULE_statement = 1, RULE_metaBlock = 2, RULE_ruleSet = 3, 
		RULE_selectorGroup = 4, RULE_selector = 5, RULE_selectorChain = 6, RULE_combinator = 7, 
		RULE_simpleSelector = 8, RULE_selectorAtom = 9, RULE_element = 10, RULE_zoomSpec = 11, 
		RULE_selectorSuffix = 12, RULE_pseudoClass = 13, RULE_classSelector = 14, 
		RULE_subPart = 15, RULE_attributeFilter = 16, RULE_attributeTest = 17, 
		RULE_attrExistence = 18, RULE_attrKey = 19, RULE_attrOp = 20, RULE_attrValue = 21, 
		RULE_bareWord = 22, RULE_block = 23, RULE_declaration = 24, RULE_setStatement = 25, 
		RULE_setItem = 26, RULE_propertyDeclaration = 27, RULE_valueList = 28, 
		RULE_propertyName = 29, RULE_exprList = 30, RULE_expr = 31, RULE_ternaryExpr = 32, 
		RULE_logicalOrExpr = 33, RULE_logicalAndExpr = 34, RULE_equalityExpr = 35, 
		RULE_relationalExpr = 36, RULE_additiveExpr = 37, RULE_multiplicativeExpr = 38, 
		RULE_unaryExpr = 39, RULE_primaryExpr = 40, RULE_functionCall = 41, RULE_literal = 42, 
		RULE_literalString = 43;
	public static readonly string[] ruleNames = {
		"stylesheet", "statement", "metaBlock", "ruleSet", "selectorGroup", "selector", 
		"selectorChain", "combinator", "simpleSelector", "selectorAtom", "element", 
		"zoomSpec", "selectorSuffix", "pseudoClass", "classSelector", "subPart", 
		"attributeFilter", "attributeTest", "attrExistence", "attrKey", "attrOp", 
		"attrValue", "bareWord", "block", "declaration", "setStatement", "setItem", 
		"propertyDeclaration", "valueList", "propertyName", "exprList", "expr", 
		"ternaryExpr", "logicalOrExpr", "logicalAndExpr", "equalityExpr", "relationalExpr", 
		"additiveExpr", "multiplicativeExpr", "unaryExpr", "primaryExpr", "functionCall", 
		"literal", "literalString"
	};

	private static readonly string[] _LiteralNames = {
		null, "'meta'", "'set'", "'node'", "'way'", "'relation'", "'area'", "'canvas'", 
		"'true'", "'false'", null, "'!~'", "'=~'", "'*='", "'^='", "'$='", "'!~='", 
		"'~='", "'!='", "'=='", "'>='", "'<='", "'||'", "'&&'", "'::'", "'?'", 
		null, null, null, null, null, null, null, "'{'", "'}'", "'['", "']'", 
		"'('", "')'", "';'", "':'", "','", "'.'", "'|'", "'='", "'<'", "'>'", 
		"'+'", "'-'", "'*'", "'/'", "'%'", "'!'", null, null, "'\\uFEFF'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "META", "SET", "NODE", "WAY", "RELATION", "AREA", "CANVAS", "TRUE", 
		"FALSE", "ZOOMRANGE", "RE_NMATCH", "RE_MATCH", "CONTAINS", "PREFIX", "SUFFIX", 
		"NMATCH", "MATCH", "NEQ", "EQEQ", "GTE", "LTE", "OR", "AND", "DCOLON", 
		"QMARK", "HEXCOLOR", "NUMBER", "DSTRING", "SSTRING", "LINE_COMMENT", "BLOCK_COMMENT", 
		"REGEX", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "LPAREN", "RPAREN", "SEMI", 
		"COLON", "COMMA", "DOT", "PIPE", "EQ", "LT", "GT", "PLUS", "MINUS", "STAR", 
		"SLASH", "PERCENT", "BANG", "IDENT", "WS", "BOM"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MapCssParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static MapCssParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MapCssParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MapCssParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class StylesheetContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(MapCssParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public StylesheetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stylesheet; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapCssParserListener typedListener = listener as IMapCssParserListener;
			if (typedListener != null) typedListener.EnterStylesheet(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapCssParserListener typedListener = listener as IMapCssParserListener;
			if (typedListener != null) typedListener.ExitStylesheet(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMapCssParserVisitor<TResult> typedVisitor = visitor as IMapCssParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStylesheet(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StylesheetContext stylesheet() {
		StylesheetContext _localctx = new StylesheetContext(Context, State);
		EnterRule(_localctx, 0, RULE_stylesheet);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 577277981098234L) != 0)) {
				{
				{
				State = 88;
				statement();
				}
				}
				State = 93;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 94;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public MetaBlockContext metaBlock() {
			return GetRuleContext<MetaBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RuleSetContext ruleSet() {
			return GetRuleContext<RuleSetContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapCssParserListener typedListener = listener as IMapCssParserListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapCssParserListener typedListener = listener as IMapCssParserListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMapCssParserVisitor<TResult> typedVisitor = visitor as IMapCssParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			State = 98;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case META:
				EnterOuterAlt(_localctx, 1);
				{
				State = 96;
				metaBlock();
				}
				break;
			case NODE:
			case WAY:
			case RELATION:
			case AREA:
			case CANVAS:
			case DCOLON:
			case LBRACK:
			case COLON:
			case DOT:
			case PIPE:
			case STAR:
				EnterOuterAlt(_localctx, 2);
				{
				State = 97;
				ruleSet();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MetaBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode META() { return GetToken(MapCssParser.META, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public MetaBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_metaBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapCssParserListener typedListener = listener as IMapCssParserListener;
			if (typedListener != null) typedListener.EnterMetaBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapCssParserListener typedListener = listener as IMapCssParserListener;
			if (typedListener != null) typedListener.ExitMetaBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMapCssParserVisitor<TResult> typedVisitor = visitor as IMapCssParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMetaBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MetaBlockContext metaBlock() {
		MetaBlockContext _localctx = new MetaBlockContext(Context, State);
		EnterRule(_localctx, 4, RULE_metaBlock);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100;
			Match(META);
			State = 101;
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RuleSetContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SelectorGroupContext selectorGroup() {
			return GetRuleContext<SelectorGroupContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public RuleSetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ruleSet; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapCssParserListener typedListener = listener as IMapCssParserListener;
			if (typedListener != null) typedListener.EnterRuleSet(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapCssParserListener typedListener = listener as IMapCssParserListener;
			if (typedListener != null) typedListener.ExitRuleSet(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMapCssParserVisitor<TResult> typedVisitor = visitor as IMapCssParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRuleSet(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RuleSetContext ruleSet() {
		RuleSetContext _localctx = new RuleSetContext(Context, State);
		EnterRule(_localctx, 6, RULE_ruleSet);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103;
			selectorGroup();
			State = 104;
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SelectorGroupContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SelectorContext[] selector() {
			return GetRuleContexts<SelectorContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SelectorContext selector(int i) {
			return GetRuleContext<SelectorContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(MapCssParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(MapCssParser.COMMA, i);
		}
		public SelectorGroupContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_selectorGroup; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapCssParserListener typedListener = listener as IMapCssParserListener;
			if (typedListener != null) typedListener.EnterSelectorGroup(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapCssParserListener typedListener = listener as IMapCssParserListener;
			if (typedListener != null) typedListener.ExitSelectorGroup(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMapCssParserVisitor<TResult> typedVisitor = visitor as IMapCssParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSelectorGroup(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SelectorGroupContext selectorGroup() {
		SelectorGroupContext _localctx = new SelectorGroupContext(Context, State);
		EnterRule(_localctx, 8, RULE_selectorGroup);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			selector();
			State = 111;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 107;
				Match(COMMA);
				State = 108;
				selector();
				}
				}
				State = 113;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SelectorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SelectorChainContext selectorChain() {
			return GetRuleContext<SelectorChainContext>(0);
		}
		public SelectorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_selector; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapCssParserListener typedListener = listener as IMapCssParserListener;
			if (typedListener != null) typedListener.EnterSelector(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapCssParserListener typedListener = listener as IMapCssParserListener;
			if (typedListener != null) typedListener.ExitSelector(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMapCssParserVisitor<TResult> typedVisitor = visitor as IMapCssParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSelector(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SelectorContext selector() {
		SelectorContext _localctx = new SelectorContext(Context, State);
		EnterRule(_localctx, 10, RULE_selector);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114;
			selectorChain();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SelectorChainContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SimpleSelectorContext[] simpleSelector() {
			return GetRuleContexts<SimpleSelectorContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SimpleSelectorContext simpleSelector(int i) {
			return GetRuleContext<SimpleSelectorContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CombinatorContext[] combinator() {
			return GetRuleContexts<CombinatorContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CombinatorContext combinator(int i) {
			return GetRuleContext<CombinatorContext>(i);
		}
		public SelectorChainContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_selectorChain; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapCssParserListener typedListener = listener as IMapCssParserListener;
			if (typedListener != null) typedListener.EnterSelectorChain(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapCssParserListener typedListener = listener as IMapCssParserListener;
			if (typedListener != null) typedListener.ExitSelectorChain(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMapCssParserVisitor<TResult> typedVisitor = visitor as IMapCssParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSelectorChain(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SelectorChainContext selectorChain() {
		SelectorChainContext _localctx = new SelectorChainContext(Context, State);
		EnterRule(_localctx, 12, RULE_selectorChain);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116;
			simpleSelector();
			State = 123;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 647646725275896L) != 0)) {
				{
				State = 121;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case GT:
					{
					{
					State = 117;
					combinator();
					State = 118;
					simpleSelector();
					}
					}
					break;
				case NODE:
				case WAY:
				case RELATION:
				case AREA:
				case CANVAS:
				case DCOLON:
				case LBRACK:
				case COLON:
				case DOT:
				case PIPE:
				case STAR:
					{
					State = 120;
					simpleSelector();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 125;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CombinatorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode GT() { return GetToken(MapCssParser.GT, 0); }
		public CombinatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_combinator; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapCssParserListener typedListener = listener as IMapCssParserListener;
			if (typedListener != null) typedListener.EnterCombinator(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapCssParserListener typedListener = listener as IMapCssParserListener;
			if (typedListener != null) typedListener.ExitCombinator(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMapCssParserVisitor<TResult> typedVisitor = visitor as IMapCssParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCombinator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CombinatorContext combinator() {
		CombinatorContext _localctx = new CombinatorContext(Context, State);
		EnterRule(_localctx, 14, RULE_combinator);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 126;
			Match(GT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SimpleSelectorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ElementContext element() {
			return GetRuleContext<ElementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SelectorAtomContext[] selectorAtom() {
			return GetRuleContexts<SelectorAtomContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SelectorAtomContext selectorAtom(int i) {
			return GetRuleContext<SelectorAtomContext>(i);
		}
		public SimpleSelectorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_simpleSelector; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapCssParserListener typedListener = listener as IMapCssParserListener;
			if (typedListener != null) typedListener.EnterSimpleSelector(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapCssParserListener typedListener = listener as IMapCssParserListener;
			if (typedListener != null) typedListener.ExitSimpleSelector(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMapCssParserVisitor<TResult> typedVisitor = visitor as IMapCssParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSimpleSelector(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SimpleSelectorContext simpleSelector() {
		SimpleSelectorContext _localctx = new SimpleSelectorContext(Context, State);
		EnterRule(_localctx, 16, RULE_simpleSelector);
		try {
			int _alt;
			State = 140;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NODE:
			case WAY:
			case RELATION:
			case AREA:
			case CANVAS:
			case STAR:
				EnterOuterAlt(_localctx, 1);
				{
				State = 128;
				element();
				State = 132;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						State = 129;
						selectorAtom();
						}
						} 
					}
					State = 134;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
				}
				}
				break;
			case DCOLON:
			case LBRACK:
			case COLON:
			case DOT:
			case PIPE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 136;
				ErrorHandler.Sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						State = 135;
						selectorAtom();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 138;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
				} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
